creando un proyecto web

--- a/Desktop/Todo Platzi/git-github/index.html
+++ b/Desktop/Todo Platzi/git-github/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Pruebas de Git</h1>
-    <p>Un párrafo wherever</p>
+    <p id="parrafo">Un párrafo wherever</p>
     
 </body>
 </html>
