cambios en index.html y styles.css

--- a/Desktop/Todo Platzi/git-github/index.html
+++ b/Desktop/Todo Platzi/git-github/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Pruebas de Git</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Creando una cabecera</title>
 </head>
 <body>
-    <h1>Pruebas de Git</h1>
-    <p id="parrafo">Un párrafo wherever</p>
+    <div class="container">
+        <div id="post">
+            <h1>Aqui estamos probando una cabecera nueva</h1>
+            <p>Y este es el párrafo que explica todo acerca de las ramas y los temas relacionados</p>
+        </div>
+    </div>
     
 </body>
 </html>
